added initial html layout

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Machine Game</title>
+    <link rel="stylesheet" href="css/main.css">
+    <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+    <h1>Sage Grouse's Slot Machine</h1>
+    <main>
+        <section id="score-board">
+            <div id="score"></div>
+        </section>
+        <section id="game-board">
+            <div class="slot-machine">
+                <div id="slot1"></div>
+                <div id="slot2"></div>
+                <div id="slot3"></div>
+            </div>
+        </section>
+        <section id="buttons">
+            <div id="start-btn"></div>
+            <div id="play-btn"></div>
+            <div id="stop1"></div>
+            <div id="stop2"></div>
+            <div id="stop3"></div>
+        </section>
+    </main>
 </body>
 </html>
