added structure for js constants

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -12,6 +12,7 @@
     <h1>Sage Grouse's Slot Machine</h1>
     <main>
         <section id="score-board">
+            <h2>Coins</h2>
             <div id="score"></div>
         </section>
         <section id="game-board">
