ubdated buttons and event listeners

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -23,11 +23,21 @@
             </div>
         </section>
         <section id="buttons">
-            <div id="start-btn"></div>
-            <div id="play-btn"></div>
-            <div id="stop1"></div>
-            <div id="stop2"></div>
-            <div id="stop3"></div>
+            <div id="start-btn">
+                <button id="startHere">Start Here</button>
+            </div>
+            <div id="play-btn">
+                <button id="play">Play</button>
+            </div>
+            <div class="stop">
+                <button id="stop1">Stop</button>
+            </div>
+            <div class="stop">
+                <button id="stop2">Stop</button>
+            </div>
+            <div class="stop">
+                <button id="stop3">Stop</button>
+            </div>
         </section>
     </main>
 </body>
