project day one changes

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -13,7 +13,9 @@
     <main>
         <section id="score-board">
             <h2>Coins</h2>
-            <div id="score"></div>
+            <div>
+                <h3 id="score">0</h3>
+            </div>
         </section>
         <section id="game-board">
             <div class="slot-machine">
@@ -24,20 +26,12 @@
         </section>
         <section id="buttons">
             <div id="start-btn">
-                <button id="startHere">Start Here</button>
+                <button class = "button" id="startHere">Start Here</button>
             </div>
-            <div id="play-btn">
-                <button id="play">Play</button>
-            </div>
-            <div class="stop">
-                <button id="stop1">Stop</button>
-            </div>
-            <div class="stop">
-                <button id="stop2">Stop</button>
-            </div>
-            <div class="stop">
-                <button id="stop3">Stop</button>
-            </div>
+            <div id="play-btn"></div>
+            <div class="stop" id="s1"></div>
+            <div class="stop" id="s2"></div>
+            <div class="stop" id="s3"></div>
         </section>
     </main>
 </body>
