--- a/project-one/index.html
+++ b/project-one/index.html
@@ -26,12 +26,12 @@
         </section>
         <section id="buttons">
             <div id="start-btn">
-                <button class = "button" id="startHere">Start Here</button>
+                <button id="startHere">Start Here</button>
             </div>
-            <div id="play-btn"></div>
-            <div class="stop" id="s1"></div>
-            <div class="stop" id="s2"></div>
-            <div class="stop" id="s3"></div>
+            <div id="play"></div>
+            <div class="stop" id="stop1"></div>
+            <div class="stop" id="stop2"></div>
+            <div class="stop" id="stop3"></div>
         </section>
     </main>
 </body>
