cleaned up js file, working on checkSlots function

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -28,10 +28,15 @@
             <div id="start-btn">
                 <button id="startHere">Start Here</button>
             </div>
-            <div id="play"></div>
-            <div class="stop" id="stop1"></div>
+            <div id="play">
+                <button id="playBtn">Play</button>
+            </div>
+            <div id="stop">
+                <button id="stopBtn">Stop</button>
+            </div>
+            <!-- <div class="stop" id="stop1"></div>
             <div class="stop" id="stop2"></div>
-            <div class="stop" id="stop3"></div>
+            <div class="stop" id="stop3"></div> -->
         </section>
     </main>
 </body>
