minor css changes

--- a/project-one/index.html
+++ b/project-one/index.html
@@ -9,7 +9,7 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1>Sage Grouse's Slot Machine</h1>
+    <h1>Javascript Slot Machine</h1>
     <main>
         <section id="score-board">
             <h2>Coins</h2>
