--- a/project-one/index.html
+++ b/project-one/index.html
@@ -35,6 +35,7 @@
                 <button id="stopBtn">Stop</button>
             </div>
         </section>
+        <h2 id="alerts">Good luck!</h2>
     </main>
 </body>
 </html>
